--- a/SchoolTV_FE_Source/src/components/featuredVideoCard/VerticalVideoCard.scss
+++ b/SchoolTV_FE_Source/src/components/featuredVideoCard/VerticalVideoCard.scss
@@ -1,7 +1,7 @@
 .vertical-video-card-container {
     width: 100%;
     height: 110px;
-    background-color: #f5f5f5;
+    background-color: var(--unique-video-card-bg);
     margin-bottom: 15px;
     padding: 10px;
     border-radius: 10px;
