--- a/SchoolTV_FE_Source/src/pages/upcomingList/upcomingList.scss
+++ b/SchoolTV_FE_Source/src/pages/upcomingList/upcomingList.scss
@@ -173,7 +173,7 @@ body {
 }
 
 .event-title {
-  font-size: 1.2rem;
+  font-size: 1.2rem !important;
   margin: 0.5rem 0;
   color: var(--text-color);
 }
