--- a/SchoolTV_FE_Source/src/pages/upcomingList/upcomingList.scss
+++ b/SchoolTV_FE_Source/src/pages/upcomingList/upcomingList.scss
@@ -213,6 +213,7 @@ body {
   padding: 0.8rem;
   border: none;
   border-radius: 8px;
+  color: var(--text-color);
   cursor: pointer;
   transition: all 0.3s ease;
   font-weight: 500;
