--- a/SchoolTV_FE_Source/src/components/so-payment-history/PaymentDataStatistic.scss
+++ b/SchoolTV_FE_Source/src/components/so-payment-history/PaymentDataStatistic.scss
@@ -2,13 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #fff;
+  background: var(--unique-video-card-bg);
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   position: relative;
   margin-top: 30px;
   width: 100%;
   padding: 20px 10px;
+  transition: box-shadow 0.3s ease-in-out, background 0.1s ease-in-out;
+  margin-top: 20px;
+
+  &:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    transform: translateY(-3px);
+  }
 
   @media (max-width: 768px) {
     flex-direction: column;
