--- a/SchoolTV_FE_Source/src/pages/CommunityPost/CommunityPost.scss
+++ b/SchoolTV_FE_Source/src/pages/CommunityPost/CommunityPost.scss
@@ -136,3 +136,22 @@
         }
     }
 }
+
+.community-post-image {
+    width: 1080px; 
+    height: auto;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .community-post-image img {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+  }
+
+  .community-post-like{
+    margin-top: 20px;
+  }
